methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:13: error: reassignment to val
       c=Color.YELLOW
        ^MethodsPicture:16: error: reassignment to val
       c=Color.Red
        ^MethodsPicture:20: error: reassignment to val
       c=Color.Blue
        ^MethodsPicture:23: error: reassignment to val
       c=Color.GREEN
        ^MethodsPicture:53: error: not enough arguments for method fourV: (c: java.awt.Color)Unit.
Unspecified value parameter c.
     fourV();
          ^